feat: admin manage condition
